# biofeedback

./: README.md  README_SETUP.md  debug.py  eeg_bandpass_viewer.py  eeg_game.py  eeg_runner.py  eeg_scroller_game.py  game.py  neurobloom_lite.py  requirements.txt
.github/: copilot-instructions.md
ArcadeBrain/: EEG_Scroller_Project_Requirements.md  README.md  main.py  pyproject.toml
ArcadeBrain/assets/shaders/: blur_h.glsl  blur_v.glsl  sdf_rounded_rect.glsl
ArcadeBrain/game/: app.py  config.py
ArcadeBrain/game/ecs/: components.py  systems.py
ArcadeBrain/game/eeg/: dsp.py  lsl_inlet.py  mapping.py  ringbuffer.py
ArcadeBrain/game/input/: controls.py
ArcadeBrain/game/render/: camera.py  layers.py  postfx.py  shapes.py
ArcadeBrain/game/scenes/: base_scene.py  gameplay_scene.py  ui_scene.py
ArcadeBrain/game/shaders/: pipeline.py
Dev/: neuro_debug_scope.py
